--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,3 +52,4 @@ dependencies {
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
 }
+apply plugin: 'com.google.gms.google-services'
